# pyrox-client

./: .dockerignore  .env.example  .gitignore  .mcp.json  404.html  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  NOTES.md  README.md  conftest.py  fly.toml  index.html  ios_path_to_completion.md  mkdocs.yml  pyproject.toml  pytest.ini  quantifying_uncertianty.ipynb  sitemap.xml  test_notebook_url.ipynb
.claude/: settings.json
.claude/hooks/: wiki-drift-guard.sh
.claude/skills/wiki/: SKILL.md
.github/workflows/: deploy.yml  ingest-and-deploy.yml  integration.yml  intergation.yml  refresh-data.yml  release.yml  tests.yml
PROJECT_STATE/: index.html
adr/0001-mcp-over-http-reporting-service/: index.html
analytics/: index.html
api/: Dockerfile  app.py  fly.toml  index.html
api/tests/: __init__.py  test_app_smoke.py
bugs/phantom-duplicate-races/: index.html
caching/: index.html
data-model/: index.html
docs/: analytics.md  api.md  caching.md  data-model.md  duckdb-stabilization.md  errors.md  faq.md  filters.md  index.md  mcp.md  privacy.md  quickstart.md  reproducible-research.md
docs/adr/: 0001-mcp-over-http-reporting-service.md
docs/assets/: styles.css
docs/maintainers/: README.md  adding-mcp-tools.md  release.md  reporting-service.md
duckdb-stabilization/: index.html
errors/: index.html
example_notebooks/: female_open_london2024_sub80.ipynb  impact_of_race_locations.ipynb  time_distribution_analysis.ipynb
faq/: index.html
filters/: index.html
issues/build-gate-integrity-guard/: index.html
issues/github-actions-release/: index.html
issues/validation-helper/: index.html
maintainers/: index.html
maintainers/adding-mcp-tools/: index.html
maintainers/mcp-launch-plan/: index.html
maintainers/release/: index.html
maintainers/reporting-service/: index.html
mcp/: index.html
models/: hyrox_live_predictor.joblib
privacy/: index.html
pyrox_api_service/: __init__.py  app.py  database.py  fetch_db.py  mcp_app.py  mcp_tools.py  race_report_loader.py  ratelimit.py  reporting_queries.py
quickstart/: index.html
reproducible-research/: index.html
scripts/: EVENT_START_DATES_SEASON_7.json  EVENT_START_DATES_SEASON_8.json  ingest_duckdb_from_s3.py  release.sh  scrape_hyresult_for_dates.py  smoke_mcp.py  sql_queries.py  sql_queries.sql  verify_duckdb_schema.py  verify_wheel_contents.py
search/: search_index.json
src/pyrox/: __init__.py  config.py  constants.py  core.py  errors.py  example.py  manifest.py  reporting.py
src/pyrox/api/: __init__.py  app.py
tests/: __init__.py  test_api.py  test_client_core.py  test_client_e2e.py  test_errors_module.py  test_fetch_db.py  test_ingest_build_gate.py  test_ingest_start_dates.py  test_mcp_tools.py  test_ratelimit.py  test_reporting.py  test_reporting_runtime.py  test_scrape_hyresult_for_dates.py  test_smoke_mcp.py  test_sql_queries_reporting.py
ui/: .env.capacitor  .gitignore  BRANDING_NOTES.md  UX_ACCEPTANCE_CHECKLIST.md  capacitor.config.json  index.html  package-lock.json  package.json  test_plan.md  vite.config.js  vitest.config.js
ui/ios/App/App/: Info.plist
ui/ios/App/App.xcodeproj/: project.pbxproj
ui/ios/App/App/Base.lproj/: LaunchScreen.storyboard
ui/src/: App.jsx  main.jsx  styles.css
ui/src/__tests__/charts/: GroupedBarChart.test.jsx  HistogramChart.test.jsx  PercentileLineChart.test.jsx  RunChangeLineChart.test.jsx  SeasonProgressionChart.test.jsx  StatBarChart.test.jsx  WorkRunSplitPieChart.test.jsx
ui/src/__tests__/hooks/: useAthleteIdentity.test.js
ui/src/__tests__/pages/: DeepdiveMode.test.jsx  PlannerMode.test.jsx  ProfileMode.test.jsx  ReportMode.test.jsx
ui/src/__tests__/utils/: formatters.test.js  parsers.test.js
ui/src/api/: client.js
ui/src/charts/: GroupedBarChart.jsx  HistogramChart.jsx  PercentileLineChart.jsx  RunChangeLineChart.jsx  SeasonProgressionChart.jsx  StatBarChart.jsx  WorkRunSplitPieChart.jsx
ui/src/components/: AppLoadingScreen.jsx  UiPrimitives.jsx
ui/src/constants/: segments.js
ui/src/hooks/: useAppBootstrap.js  useAthleteIdentity.js  useIosMobile.js
ui/src/pages/: CompareMode.jsx  DeepdiveMode.jsx  PlannerMode.jsx  ProfileMode.jsx  RankingsMode.jsx  ReportMode.jsx
ui/src/style_layers/: bootstrap.css  premium_flow.css  premium_primitives.css  premium_tokens.css
ui/src/styles/: base.css  charts.css  components.css  layouts.css  tokens.css
ui/src/utils/: formatters.js  haptics.js  parsers.js  pdf.js
wiki/: active-work.md  components.md  domain-concepts.md  index.md  log.md  overview.md
(+2 files in other folders)
