[build-system]
requires = ["hatchling>=1.20", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "pyrox-client"
dynamic = ["version"]
description = "HYROX race data client – retrieve full race results via Python"
authors = [{ name = "Vlad Matei" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.2",
    "fastparquet>=2024.5.0",
    "fsspec>=2024.2.0",
    "s3fs>=2024.2.0",
    "requests>=2.31",
    "platformdirs>=4.2.0",
    "httpx>=0.28.1",
    "respx>=0.22.0",
    "pyarrow>=14.0.0,<18.0.0",  #  stable versions with wheels, had issues with latest
]


# You’re using a src/ layout. This tells Hatch which package to build.
[tool.hatch.build.targets.wheel]
packages = ["src/pyrox"]

# Ensure sdist includes your source + docs
[tool.hatch.build.targets.sdist]
include = [
  "src/pyrox",
  "README.md",
  "pyproject.toml"
]

[tool.hatch.version]
path = "src/pyrox/__init__.py"
