[build-system]
requires = ["hatchling>=1.20", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "pyrox-client"
dynamic = ["version"]
description = "HYROX race data client – retrieve full race results via Python"
authors = [{ name = "Vlad Matei" }]
readme = {file="README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "fsspec>=2024.2.0",
    "httpx>=0.28.1",
    "pyarrow>=22.0.0",  #  stable versions with wheels, had issues with latest
]

[project.optional-dependencies]
reporting = [
    "duckdb>=1.4.3",
    "numpy>=1.26.4",
]

# Repository-local service dependencies (FastAPI service lives in pyrox_api_service/).
api = [
    "duckdb>=1.4.3",
    "fastapi>=0.115.0",
    "limits>=3.0",
    "mcp>=1.2.0",
    "numpy>=1.26.4",
    "uvicorn[standard]>=0.30.0",
]

# urls."Homepage" = "https://github.com/vmatei2/pyrox-client"
# urls."Issues"   = "https://github.com/vmatei2/pyrox-client/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pyrox"]

exclude = [
  "src/pyrox/api/**",
  "src/pyrox/helpers.py",
]

[tool.hatch.build.targets.sdist]
include = [
  "README.md",
  "pyproject.toml",
  "src/pyrox/**",
]
exclude = [
  "src/pyrox/api/**",
  "src/pyrox/helpers.py",
  "**/__pycache__/**",
  "*.pyc",
  "ui/**",
  "pyrox_api_service/**",
  "scripts/**",
  "docs/**",
  "example_notebooks/**",
  ".venv*/**",
  "node_modules/**",
  "dist/**",
  "pyrox_duckdb",
]

[tool.hatch.version]
path = "src/pyrox/__init__.py"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "duckdb>=1.4.3",
    "fastparquet>=2024.5.0",
    "isort>=6.1.0",
    "pylint>=3.3.9",
    "pytest>=8.4.2",
    "ruff>=0.14.7",
    "respx>=0.22.0",
    "requests>=2.31",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "ipykernel>=7.1.0",
    "mkdocs>=1.6.1",
    "python-dotenv>=1.0.0",
    "s3fs>=2024.2.0",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "twine>=6.2.0",
    "bs4>=0.0.2",
]
